--- a/app/src/main/res/layout/activity_frm_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_frm_dang_nhap.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
-            android:hint="Tên đăng nhập" />
+            android:hint="Nhập email" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,7 +33,7 @@
             android:id="@+id/edtMatKhau"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="********"
+            android:hint="Nhập mật khẩu"
             android:inputType="textPassword"/>
     </LinearLayout>
     <CheckBox
@@ -42,27 +42,29 @@
         android:layout_height="wrap_content"
         android:id="@+id/cbLuuTK"
         android:text="Duy trì đăng nhập"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center_horizontal"
         android:layout_marginTop="25dp">
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btnLink"
-            android:layout_weight="50"
-            android:background="@null"
+            android:text="Quêm mật khẩu"
+            android:id="@+id/txtQuenMatKhau"
             android:textColor="@color/mauxanh"
-            android:text="Quên mật khẩu"/>
+            android:layout_marginRight="15dp"
+            />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/btnLogin"
             android:text="Đăng nhập"
-
-            android:layout_weight="50"
-            />
+            android:background="@color/mauxam"
+            android:textColor="@color/actionbar_text"
+            android:enabled="false"/>
     </LinearLayout>
 
 </LinearLayout>
