--- a/app/src/main/res/layout/activity_frm_quen_mk.xml
+++ b/app/src/main/res/layout/activity_frm_quen_mk.xml
@@ -35,6 +35,9 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/mauxam"
+            android:textColor="@color/actionbar_text"
+            android:enabled="false"
             android:id="@+id/btnSendMail"
             android:text="Xác thực"/>
     </LinearLayout>
