validation for signup, view profile

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,6 +3,7 @@
     <color name="mauxanh">#0099ff</color>
     <color name="maucam">#ff9933</color>
     <color name="mauxam">#666666</color>
+    <color name="mauden">#F000</color>
     <color name="actionbar_background">#303f9f</color>
     <color name="actionbar_text">#ffffff</color>
     <color name="maudo">#F00</color>
