--- a/app/src/main/res/layout/activity_frm_dang_ky.xml
+++ b/app/src/main/res/layout/activity_frm_dang_ky.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <LinearLayout
     android:layout_width="fill_parent"
@@ -32,25 +33,45 @@
             android:src="@drawable/icon"
             android:scaleType="fitCenter"/>
             <TextView
+                android:id="@+id/chonanh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Chọn (*)"
+                android:text="Chọn ảnh (*)"
                 android:gravity="bottom"
-                android:layout_marginTop="45dp"
-                android:layout_marginLeft="30dp"/>
-
+                android:textSize="11dp"
+                android:layout_marginTop="81dp"
+                android:layout_marginLeft="21dp"
+                android:textColor="@color/mauden"
+                android:visibility="visible"/>
 </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
         <EditText
             android:id="@+id/full_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_gravity="right"
+            android:layout_gravity="center"
             android:ems="30"
             android:singleLine="false"
             android:maxLines="1"
             android:inputType="text"
-            android:hint="Nhập Họ và Tên(*)"/>
+            android:hint="Nhập họ và tên (*)"/>
+            <TextView
+                android:id="@+id/errorname"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Vui lòng nhập họ và tên"
+                android:textColor="@color/maudo"
+                android:gravity="left"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="20dp"
+                android:visibility="gone"/>
+
+        </RelativeLayout>
+
 
     </LinearLayout>
     <LinearLayout
@@ -79,7 +100,7 @@
             android:singleLine="false"
             android:maxLines="1"
             android:inputType="textEmailAddress"
-            android:hint="Email(*)"
+            android:hint="Email (*)"
             />
         <TextView
             android:id="@+id/erroEmail1"
@@ -102,7 +123,7 @@
         android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_gravity="left"
         android:paddingLeft="20dp"
         android:paddingRight="20dp">
@@ -126,7 +147,7 @@
             android:singleLine="false"
             android:maxLines="1"
             android:inputType="textPassword"
-            android:hint="Nhập mật khẩu(*)"
+            android:hint="Nhập mật khẩu (*)"
             />
         <TextView
             android:id="@+id/errorpass1"
@@ -134,7 +155,7 @@
             android:layout_height="wrap_content"
             android:text="Vui lòng nhập mật khẩu"
             android:visibility="gone"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:textColor="@color/maudo"/>
         <TextView
             android:id="@+id/errorpass2"
@@ -142,7 +163,7 @@
             android:layout_height="wrap_content"
             android:text="Mật khẩu phải có ít nhất 6 ký tự"
             android:visibility="gone"
-            android:layout_gravity="center"
+            android:layout_gravity="left"
             android:textColor="@color/maudo"/>
     </LinearLayout>
     <LinearLayout
@@ -176,9 +197,10 @@
             android:hint="Xác nhận mật khẩu (*)"
             />
         <TextView
+            android:id="@+id/cfpassword"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Nhập lại mật khẩu phải trùng khớp với mật khẩu đang ký"
+            android:text="Nhập lại mật khẩu phải trùng khớp với mật khẩu đăng ký"
             android:visibility="gone"
             android:layout_gravity="center"
             android:textColor="@color/maudo"/>
@@ -360,6 +382,7 @@
             android:hint="Nhập số điện thoại (*)"
             />
         <TextView
+            android:id="@+id/errorphone1"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Vui lòng nhập số điện thoại"
@@ -367,6 +390,7 @@
             android:layout_gravity="center"
             android:textColor="@color/maudo"/>
         <TextView
+            android:id="@+id/errorphone2"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Số điện thoại yêu cầu phải có ít nhất 10 ký tự"
@@ -397,8 +421,9 @@
             android:singleLine="false"
             android:maxLines="2"
             android:inputType="text"
-            android:hint="Nhập địa chỉ(*)"/>
+            android:hint="Nhập địa chỉ (*)"/>
         <TextView
+            android:id="@+id/erroraddress"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="Vui lòng nhập địa chỉ"
@@ -553,10 +578,11 @@
             android:layout_height="wrap_content"
             android:text="Đăng ký"
             android:gravity="center"
-            android:textSize="30dp"
+            android:textSize="15dp"
             android:textColor="@color/actionbar_text"
             android:background="@color/mauxam"
             android:enabled="false"
+
             />
         <!--<Button-->
         <!--android:layout_width="wrap_content"-->
