validation form login, forgot password, view list my posts

--- a/app/src/main/res/layout/activity_frm_ghi_chu.xml
+++ b/app/src/main/res/layout/activity_frm_ghi_chu.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:weightSum="100"
     tools:context="com.example.llh_pc.it_support.activities.frmGhiChu">
     <TextView
         android:layout_width="wrap_content"
@@ -14,13 +15,21 @@
         android:text="Viết ghi chú cho báo hỏng"
         android:textSize="27dp"
         android:textStyle="bold"
-        android:layout_gravity="center"/>
-
-    <EditText
-        android:id="@+id/edtGhiChu"
-        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="5"/>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Viết ghi chú ở đây.(Có thể bỏ trống)" />
+        android:orientation="vertical"
+        android:layout_weight="30">
+        <EditText
+            android:layout_gravity="top"
+            android:id="@+id/edtGhiChu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:hint="Viết ghi chú ở đây.(Có thể bỏ trống)"
+            />
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnCreatePost"
@@ -29,6 +38,7 @@
         android:background="@color/mauxanh"
         android:text="OK"
         android:textColor="@color/actionbar_text"
-        android:layout_gravity="right"/>
+        android:layout_gravity="right"
+        />
 
 </LinearLayout>
