--- a/app/src/main/res/layout/activity_frm_quen_mk.xml
+++ b/app/src/main/res/layout/activity_frm_quen_mk.xml
@@ -24,7 +24,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/edtMail"
-            android:hint="Nhập mail"
+            android:inputType="textEmailAddress"
+            android:hint="Nhập mail"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtEmail"
+            android:textColor="@color/maudo"
             />
     </LinearLayout>
     <LinearLayout
