completed detail post

--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="mauxanh">#0099ff</color>
+    <color name="mauxanh">#05afef</color>
     <color name="maucam">#ff9933</color>
     <color name="mauxam">#666666</color>
     <color name="mauden">#F000</color>
