--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,3 +1,11 @@
+
+<ScrollView
+    tools:context="com.example.llh_pc.it_support.activities.Profile"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:tools="http://schemas.android.com/tools"
@@ -370,3 +378,4 @@
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
+</ScrollView>
