--- a/app/src/main/res/layout/activity_frm_tab_host.xml
+++ b/app/src/main/res/layout/activity_frm_tab_host.xml
@@ -21,7 +21,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="-4dp"
             android:layout_weight="0"
-            android:background="@color/mauxam"/>
+            android:background="@color/mauxam"
+            />
     </LinearLayout>
 
 </TabHost>
