--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -24,15 +24,27 @@
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
-        <ImageButton
-            android:id="@+id/bntImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/no_avatar"
-            android:scaleType="fitCenter"
+        <!--<ImageButton-->
+            <!--android:id="@+id/bntImage"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:src="@drawable/no_avatar"-->
+            <!--android:scaleType="fitCenter"-->
+            <!--android:enabled="false"-->
+            <!--android:clickable="false"-->
+            <!--android:background="@drawable/draw_shape"></ImageButton>-->
+        <de.hdodenhof.circleimageview.CircleImageView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/profile_image"
+            android:layout_width="71dp"
+            android:layout_height="71dp"
+            android:src="@drawable/avatar"
             android:enabled="false"
-            android:clickable="false"></ImageButton>
+            android:clickable = "false"
+            />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
