--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -7,4 +7,5 @@
     <color name="actionbar_background">#303f9f</color>
     <color name="actionbar_text">#ffffff</color>
     <color name="maudo">#F00</color>
+    <color name="maubac">#cccccc</color>
 </resources>
