--- a/app/src/main/res/layout/activity_frm_tab_host.xml
+++ b/app/src/main/res/layout/activity_frm_tab_host.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/tabhost"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="fill_parent"
+        >
         <LinearLayout
 
             android:layout_width="fill_parent"
@@ -33,6 +36,7 @@
                 android:layout_weight="0"
                 android:background="@color/mauxam" />
         </LinearLayout>
+
     </TabHost>
     <android.support.design.widget.NavigationView
         android:id="@+id/menu_drawer"
