--- a/app/src/main/res/layout/activity_frm_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_frm_dang_nhap.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -7,8 +8,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.llh_pc.it_support.activities.frmDangNhap">
+    tools:context="com.example.llh_pc.it_support.activities.frmDangNhap"
+    >
 
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
@@ -50,12 +58,13 @@
             />
     </LinearLayout>
     <CheckBox
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="7dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cbLuuTK"
         android:text="Duy trì đăng nhập"
         android:button="@drawable/drb_checklogin"
+        android:paddingLeft="10dp"
         />
 
     <LinearLayout
@@ -81,5 +90,5 @@
             android:textColor="@color/actionbar_text"
             android:enabled="false"/>
     </LinearLayout>
-
 </LinearLayout>
+</ScrollView>
