--- a/app/src/main/res/drawable/drb_checklogin.xml
+++ b/app/src/main/res/drawable/drb_checklogin.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_checkbox_blank_outline"
+    <item android:drawable="@drawable/check_white"
         android:state_checked="false"
         />
-    <item android:drawable="@drawable/ic_checkbox_marked"
+    <item android:drawable="@drawable/checked"
         android:state_checked="true"/>
-    <item android:drawable="@drawable/ic_checkbox_blank_outline"/>
+    <item android:drawable="@drawable/check_white"/>
 </selector>
