--- a/app/src/main/res/layout/activity_frm_luu_tru.xml
+++ b/app/src/main/res/layout/activity_frm_luu_tru.xml
@@ -1,16 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.llh_pc.it_support.activities.frmBaoHu">
-
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/lsPost">
+        android:id="@+id/lsPost"
+        android:background="@color/mauxam">
     </ListView>
-
 </LinearLayout>
